--- a/client/src/styles/store/single.css
+++ b/client/src/styles/store/single.css
@@ -22,9 +22,8 @@ body {
 	justify-content: start;
 	align-items: center;
 
-	animation: loadAnimation 2.5s ease-out;
+	animation: loadAnimation 1.5s ease-out;
 }
-
 
 @keyframes loadAnimation {
 	from {
@@ -37,9 +36,7 @@ body {
 
 .divider {
 	width: 100%;
-	/* margin: 5rem 0; */
 	margin-bottom: 5rem;
-	margin-top: 3rem;
 	background-color: var(--color-text-secondary);
 }
 
@@ -74,6 +71,18 @@ body {
 .product-cover {
 	width: 30%;
 	height: 620px;
+	animation: productCoverPopUp 1.5s;
+}
+
+@keyframes productCoverPopUp {
+	from {
+		opacity: 0;
+		transform: scale(0);
+	}
+	to {
+		opacity: 1;
+		transform: scale(1);
+	}
 }
 
 .cover {
@@ -94,10 +103,41 @@ body {
 }
 
 .product-title {
-	width: 90%;
+	width: 100%;
 
 	color: var(--color-text-primary);
 	font-size: var(--font-product-title);
+
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.title-part {
+	width: 90%;
+	animation: titleSlideRight 1.5s;
+	cursor: pointer;
+}
+
+#info-ref {
+	transition: all 0.35s ease-in-out;
+}
+
+#info-ref:hover {
+	color: var(--color-ascent);
+}
+
+.title-part:hover {
+	color: var(--color-ascent);
+}
+
+@keyframes titleSlideRight {
+	from {
+		transform: scale(0);
+	}
+	to {
+		transform: scale(1);
+	}
 }
 
 .rating-author {
