--- a/client/src/styles/store/store.css
+++ b/client/src/styles/store/store.css
@@ -9,6 +9,10 @@ body {
 	margin-left: 6rem;
 }
 
+.divider {
+	width: 90%;
+	background-color: var(--color-text-secondary);
+}
 
 .container {
 	box-sizing: border-box;
@@ -24,7 +28,7 @@ body {
 
 	background-color: var(--color-background);
 
-  margin-top: 6rem;
+	margin-top: 5rem;
 }
 
 /* .container div {
@@ -41,17 +45,16 @@ body {
 	gap: 1rem;
 }
 
-
 .side-bar-card {
-  width: 100%;
-  height: 3rem;
+	width: 100%;
+	height: 3rem;
 
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 1rem;
 
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 .store-section {
@@ -59,8 +62,8 @@ body {
 
 	display: flex;
 	flex-direction: column;
-  justify-content: start;
-  gap: 2rem;
+	justify-content: start;
+	gap: 5rem;
 
 	margin-bottom: 10rem;
 }
@@ -68,61 +71,102 @@ body {
 .featured {
 	height: 450px;
 
-  display: flex;
-  justify-content: space-between;
-  align-items: top;
+	display: flex;
+	justify-content: space-between;
+	align-items: top;
 
-  box-sizing: border-box;
+	box-sizing: border-box;
 
-  padding: 1rem;
+	padding: 1rem;
 }
 
 .featured-left-section {
-  width: 40%;
+	width: 40%;
 
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
+	display: flex;
+	flex-direction: column;
+	gap: 0.5rem;
 }
 
 .ghost-title {
-  color: var(--color-text-secondary);
-  font-weight: bold;
+	color: var(--color-text-secondary);
+	font-weight: bold;
+
+	animation: popDown 1s ease-in-out;
+}
+
+@keyframes popDown {
+	from {
+		transform: scale(0) translateY(-5rem);
+		opacity: 0;
+	}
+	to {
+		transform: scale(1) translateY(0);
+		opacity: 1;
+	}
 }
 
 .featured-title {
-  font-size: 3.5rem;
-  font-weight: 500;
+	font-size: 3.5rem;
+	font-weight: 500;
 
-  width: 90%;
+	width: 90%;
+
+	animation: slideFromLeft 1s ease-in-out;
+}
+
+@keyframes slideFromLeft {
+	from {
+		transform: translateX(-10rem) scale(0);
+		opacity: 0;
+	}
+	to {
+		transform: translateX(0) scale(1);
+		opacity: 1;
+	}
 }
 
 .featured-shop-now-btn {
-  background-color: var(--color-primary);
-  color: var(--color-background);
+	background-color: var(--color-primary);
+	color: var(--color-background);
 
-  border: 1px solid var(--color-primary);
-  border-radius: 1rem;
+	border: 1px solid var(--color-primary);
+	border-radius: 1rem;
+	font-size: 1.25rem;
 
-  font-size: 1.25rem;
+	width: 20rem;
+	height: 5rem;
+	margin-top: 1rem;
 
-  width: 20rem;
-  height: 5rem;
+	transition: all 0.35s ease-in-out;
 
-  margin-top: 1rem;
+	animation: shopNowPopUp 1s ease-in-out;
+}
 
-
-  transition: all 0.35s ease-in-out;
+@keyframes shopNowPopUp {
+	0% {
+		transform: translateY(10rem) scale(0.8);
+		opacity: 0;
+	}
+	50% {
+		opacity: 0;
+	}
+	100% {
+		transform: translateY(0) scale(1);
+		opacity: 1;
+	}
 }
 
 .featured-shop-now-btn:hover {
-  background-color: var(--color-ascent);
-  border: 1px solid var(--color-ascent);
+	background-color: var(--color-ascent);
+	border: 1px solid var(--color-ascent);
+
+	opacity: 0.8;
 }
 
 .featured-right-section {
-  width: 55%;
-  height: 100%;
+	width: 55%;
+	height: 100%;
 
 	display: flex;
 	justify-content: space-between;
@@ -133,8 +177,20 @@ body {
 	height: 100%;
 
 	object-fit: contain;
+
+	animation: imagePopUp 1s ease-in-out;
 }
 
+@keyframes imagePopUp {
+	from {
+		transform: scale(0);
+		opacity: 0;
+	}	
+	to {
+		transform: scale(1);
+		opacity: 1;
+	}
+}
 
 .info-stuff {
 	display: flex;
@@ -153,7 +209,7 @@ body {
 .products-grid {
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
-	grid-template-rows: repeat(3, 580px);
+	grid-template-rows: repeat(3, 560px);
 	gap: 2rem;
 }
 
@@ -163,6 +219,38 @@ body {
 	flex-direction: column;
 	gap: 0.75rem;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.19);
+
+	animation-name: gridResize;
+	animation-duration: 1s;
+	animation-timing-function: ease-out;
+	animation-fill-mode: both;
+	animation-timeline: view(50% 5%);
+}
+
+.product-card.pop-in {
+	/* animation: popUpFromDown 1s ease-in-out both; */
+}
+
+@keyframes popUpFromDown {
+	from {
+		transform: translateY(10rem);
+		opacity: 0;
+	}
+	to {
+		transform: translateY(0);
+		opacity: 1;
+	}
+}
+
+@keyframes gridResize {
+	from {
+		transform: scale(0.7);
+		opacity: 0.8;
+	}
+	to {
+		transform: scale(1);
+		opacity: 1;
+	}
 }
 
 .product-card img {
@@ -191,7 +279,7 @@ body {
 }
 
 #wishlist:hover {
-  transform: scale(1.1);
+	transform: scale(1.1);
 }
 
 #wishlist.toggled {
