--- a/client/src/views/store/single.html
+++ b/client/src/views/store/single.html
@@ -268,6 +268,8 @@
 					<i class="fa fa-linkedin-square" aria-hidden="true"></i>
 
 					<i class="fa fa-twitter-square" aria-hidden="true"></i>
+
+					<i class="fa-brands fa-github" id="github-repo"></i>
 				</div>
 			</div>
 		</div>
@@ -276,7 +278,8 @@
 			const increaseBtn = document.getElementById("increase");
 			const countInput = document.getElementById("count");
 			const infoRefButton = document.getElementById("info-ref");
-			const productNavSection = document.querySelector(".product-nav-list")
+			const productNavSection =
+				document.querySelector(".product-nav-list");
 
 			decreaseBtn.addEventListener("click", () => {
 				let value = parseInt(countInput.value) || 0;
@@ -296,11 +299,20 @@
 					window.location.href = "../homePage.html";
 				});
 
-				infoRefButton.addEventListener('click', () => {
-					productNavSection.scrollIntoView({
-						behavior: 'smooth'
-					})
-				})
+			infoRefButton.addEventListener("click", () => {
+				productNavSection.scrollIntoView({
+					behavior: "smooth",
+				});
+			});
+
+			const githubIcon = document.getElementById("github-repo");
+
+			githubIcon.addEventListener("click", () => {
+				window.open(
+					"https://github.com/RAGREON/Book-Store-Showroom",
+					"_blank"
+				);
+			});
 		</script>
 	</body>
 </html>
